--- a/InternationalStudents.Rmd
+++ b/InternationalStudents.Rmd
@@ -1,7 +1,8 @@
 ---
 title: "106-2 大數據分析方法 作業二"
 output: github_document
-author: Yi-Ju Tseng
+always_allow_html: yes
+author: 連昱棋
 ---
 
 作業完整說明[連結](https://docs.google.com/document/d/1aLGSsGXhgOVgwzSg9JdaNz2qGPQJSoupDAQownkGf_I/edit?usp=sharing)
@@ -13,6 +14,7 @@ author: Yi-Ju Tseng
 ## 來台境外生分析
 ### 資料匯入與處理
 ```{r dataloadToTWN}
+options(allow_html_in_all_outputs=TRUE)
 library(readr)
 library(dplyr)
 library(ggplot2)
@@ -74,12 +76,11 @@ CountryBaseSum106<-Data106[,c("國別","ForeignStudentSum106")]
 CountryBaseSum<-merge(CountryBaseSum103,CountryBaseSum104,by="國別",all=T)
 CountryBaseSum<-merge(CountryBaseSum,CountryBaseSum105,by="國別",all=T)  
 CountryBaseSum<-merge(CountryBaseSum,CountryBaseSum106,by="國別",all=T)
+#加總四個年度資料
 CountryBaseSum$CountrySum<-0
 for (n in 1:177) {
-  CountryBaseSum[n,6]<-sum(CountryBaseSum[n,2:5],na.rm = T)#加總四個年度資料
+  CountryBaseSum[n,6]<-sum(CountryBaseSum[n,2:5],na.rm = T)
 }
-
-head(arrange(CountryBaseSum,desc(CountrySum)),10)
 knitr::kable(head(arrange(CountryBaseSum,desc(CountrySum)),10))
 
 ```
@@ -87,8 +88,10 @@ knitr::kable(head(arrange(CountryBaseSum,desc(CountrySum)),10))
 ### 哪間大學的境外生最多呢？
 ```{r ToTWNUniversity}
 #這是R Code Chunk
+#處理不正常的值
 Data103a$`非學位生-大陸研修生`<-gsub("…",NA,Data103a$`非學位生-大陸研修生`)
 Data104a$`非學位生-大陸研修生`<-gsub("…",NA,Data104a$`非學位生-大陸研修生`)
+#分別加總每年境外生人數
 Data103a$SchoolForeignStudentSum103<-0
 for (n in 1:153) {
   Data103a[n,13]<-sum(Data103a[n,4:9],na.rm = T)
@@ -106,8 +109,8 @@ Data106a$SchoolForeignStudentSum106<-0
 for (n in 1:154) {
   Data106a[n,13]<-sum(Data106a[n,4:10],na.rm = T)
 }
-
-#以學校為基準結合四個年度的境外生人數(第一題)
+ 
+#以學校為基準結合四個年度的境外生人數
 SchoolBaseSum103<-Data103a[,c("學校名稱","SchoolForeignStudentSum103")]
 SchoolBaseSum104<-Data104a[,c("學校名稱","SchoolForeignStudentSum104")]
 SchoolBaseSum105<-Data105a[,c("學校名稱","SchoolForeignStudentSum105")]
@@ -115,12 +118,11 @@ SchoolBaseSum106<-Data106a[,c("學校名稱","SchoolForeignStudentSum106")]
 SchoolBaseSum<-merge(SchoolBaseSum103,SchoolBaseSum104,by="學校名稱",all=T)
 SchoolBaseSum<-merge(SchoolBaseSum,SchoolBaseSum105,by="學校名稱",all=T)
 SchoolBaseSum<-merge(SchoolBaseSum,SchoolBaseSum106,by="學校名稱",all=T)
+#加總四個年度資料
 SchoolBaseSum$SchoolSum<-0
 for(n in 1:177){
-  SchoolBaseSum[n,6]<-sum(SchoolBaseSum[n,2:5],na.rm = T)#加總四個年度資料
+  SchoolBaseSum[n,6]<-sum(SchoolBaseSum[n,2:5],na.rm = T)
 }
-
-head(arrange(SchoolBaseSum,desc(SchoolSum)),10)
 knitr::kable(head(arrange(SchoolBaseSum,desc(SchoolSum)),10))
 
 ```
@@ -140,6 +142,59 @@ ggplot(CountryBaseSum,
 ### 各個國家來台灣唸書的學生人數面量圖
 ```{r ToTWNCountryMap}
 #這是R Code Chunk
+#(第三題)用面量圖呈現各個國家來台灣唸書的學生人數，人數越多顏色越深
+
+#把國家名字換成英文
+CountryName<-fromJSON("C:/Users/hh770/Downloads/countries.json")
+CountryBaseSum$country<-""
+for (n in 1:177) {
+  for (m in 1:250) {
+     if(CountryBaseSum[n,1]==CountryName$Taiwan[m])
+   CountryBaseSum[n,7]<-CountryName$ISO3[m]
+   }
+}
+#手動輸入
+CountryBaseSum[5,7]<-"CHN"
+CountryBaseSum[8,7]<-"PNG"
+CountryBaseSum[42,7]<-"TUV"
+CountryBaseSum[48,7]<-"HRV"
+CountryBaseSum[50,7]<-"HND"
+CountryBaseSum[67,7]<-"BIH"
+CountryBaseSum[72,7]<-"SAU"
+CountryBaseSum[80,7]<-"KOR"
+CountryBaseSum[81,7]<-"SSD"
+CountryBaseSum[87,7]<-"KOS"
+CountryBaseSum[96,7]<-"COD"
+CountryBaseSum[108,7]<-"NAM"
+CountryBaseSum[112,7]<-"SLB"
+CountryBaseSum[117,7]<-"MHL"
+CountryBaseSum[119,7]<-"MLT"
+CountryBaseSum[120,7]<-"FSM"
+CountryBaseSum[139,7]<-"SRB"
+CountryBaseSum[143,7]<-"SGP"
+CountryBaseSum[144,7]<-"SLE"
+CountryBaseSum[148,7]<-"VCT"
+CountryBaseSum[150,7]<-"KNA"
+CountryBaseSum[153,7]<-"COM"
+CountryBaseSum[167,7]<-"AUS"
+CountryBaseSum[173,7]<-"CYP"
+#用PLOT畫圖
+l <- list(color = toRGB("grey"), width = 0.8)
+g <- list(
+  showframe=FALSE,
+  showcountries=TRUE,
+  showcoastlines=TRUE,
+  coastlinecolor=toRGB("grey"),
+  countrycolor=toRGB("grey"))
+plot_ly(CountryBaseSum, 
+        z=~CountrySum, 
+        text=~country, 
+        locations=~country, 
+        type= 'choropleth',
+        color=~CountrySum, 
+        colors='Greens', 
+        marker = list(line = l)) %>%
+  layout(title='各個國家來台灣唸書的學生人數', geo=g)
 ```
 
 ## 台灣學生國際交流分析
@@ -158,7 +213,6 @@ StudyAbord105<-StudyAbord105[,-c(4,5,6)]
 #(第四題第一小題)大專院校的學生最喜歡去哪些國家交流？請取出前十名的國家與總人數，由大到小排序
 PRTCountrySum<-group_by(Student_RPT,對方學校.機構.國別.地區.)%>%
   summarise(countrycount=sum(小計))
-head(arrange(PRTCountrySum,desc(countrycount)),10)
 knitr::kable(head(arrange(PRTCountrySum,desc(countrycount)),10))
 ```
 
@@ -167,7 +221,6 @@ knitr::kable(head(arrange(PRTCountrySum,desc(countrycount)),10))
 #這是R Code Chunk
 PRTSchoolSum<-group_by(Student_RPT,學校名稱)%>%
   summarise(schoolcount=sum(小計))
-head(arrange(PRTSchoolSum,desc(schoolcount)),10)
 knitr::kable(head(arrange(PRTSchoolSum,desc(schoolcount)),10))
 ```
 
@@ -186,6 +239,97 @@ ggplot(PRTSchoolSum,
 ### 台灣大專院校的學生最喜歡去哪些國家進修交流面量圖
 ```{r FromTWNCountryMap}
 #這是R Code Chunk
+#(第六題)請用面量圖呈現台灣大專院校的學生去各國家進修交流人數，人數越多顏色越深
+#把中文國家名字改成英文
+PRTCountrySum$country<-""
+for (n in 2:149) {
+  for (m in 1:250) {
+    if(PRTCountrySum[n,1]==CountryName$Taiwan[m])
+      PRTCountrySum[n,3]<-CountryName$ISO3[m]
+  }
+}
+#手動輸入
+PRTCountrySum[3,3]<-"TUR"
+PRTCountrySum[4,3]<-"CHN"
+PRTCountrySum[5,3]<-"KOR"
+PRTCountrySum[6,3]<-"CHN"
+PRTCountrySum[8,3]<-"DNK"
+PRTCountrySum[10,3]<-"ECU"
+PRTCountrySum[12,3]<-"BRA"
+PRTCountrySum[14,3]<-"PAN"
+PRTCountrySum[17,3]<-"BEL"
+PRTCountrySum[24,3]<-"SWZ"
+PRTCountrySum[27,3]<-"GMB"
+PRTCountrySum[28,3]<-"BRL"
+PRTCountrySum[30,3]<-"LTU"
+PRTCountrySum[31,3]<-"IRN"
+PRTCountrySum[33,3]<-"ISL"
+PRTCountrySum[35,3]<-"LIE"
+PRTCountrySum[37,3]<-"HUN"
+PRTCountrySum[38,3]<-"IDN"
+PRTCountrySum[40,3]<-"IDN"
+PRTCountrySum[41,3]<-"IND"
+PRTCountrySum[43,3]<-"ESP"
+PRTCountrySum[c(44,45),3]<-"HRV"
+PRTCountrySum[47,3]<-"GRC"
+PRTCountrySum[49,3]<-"BRN"
+PRTCountrySum[51,3]<-"SAU"
+PRTCountrySum[55,3]<-"PLW"
+PRTCountrySum[57,3]<-"LVA"
+PRTCountrySum[60,3]<-"POL"
+PRTCountrySum[62,3]<-"FIN"
+PRTCountrySum[64,3]<-"OMN"
+PRTCountrySum[65,3]<-"IRN"
+PRTCountrySum[67,3]<-"RUS"
+PRTCountrySum[69,3]<-"ZAF"
+PRTCountrySum[70,3]<-"KOR"
+PRTCountrySum[72,3]<-"KHM"
+PRTCountrySum[74,3]<-"KOS"
+PRTCountrySum[76,3]<-"TUN"
+PRTCountrySum[78,3]<-"JOR"
+PRTCountrySum[84,3]<-"CRI"
+PRTCountrySum[86,3]<-"EGY"
+PRTCountrySum[88,3]<-"NOR"
+PRTCountrySum[90,3]<-"THA"
+PRTCountrySum[94,3]<-"SLB"
+PRTCountrySum[97,3]<-"MLT"
+PRTCountrySum[99,3]<-"CZE"
+PRTCountrySum[101,3]<-"NLD"
+PRTCountrySum[102,3]<-"MOZ"
+PRTCountrySum[104,3]<-"FJI"
+PRTCountrySum[106,3]<-"LKA"
+PRTCountrySum[108,3]<-"SVK"
+PRTCountrySum[110,3]<-"SVN"
+PRTCountrySum[113,3]<-"PHL"
+PRTCountrySum[115,3]<-"VNV"
+PRTCountrySum[116,3]<-"SYC"
+PRTCountrySum[117,3]<-"SRB"
+PRTCountrySum[119,3]<-"AUT"
+PRTCountrySum[121,3]<-"EST"
+PRTCountrySum[123,3]<-"IRL"
+PRTCountrySum[c(124,125),3]<-"SGP"
+PRTCountrySum[128,3]<-"SWE"
+PRTCountrySum[130,3]<-"ITA"
+PRTCountrySum[132,3]<-"STP"
+PRTCountrySum[134,3]<-"PRT"
+PRTCountrySum[136,3]<-"MNG"
+PRTCountrySum[138,3]<-"MEX"
+PRTCountrySum[140,3]<-"DEU"
+PRTCountrySum[142,3]<-"MAR"
+PRTCountrySum[144,3]<-"MUS"
+PRTCountrySum[145,3]<-"MMR"
+PRTCountrySum[146,3]<-"AUS"
+PRTCountrySum[148,3]<-"LUX"
+#用PLOT畫圖
+plot_ly(PRTCountrySum, 
+        z=~countrycount, 
+        text=~country, 
+        locations=~country, 
+        type= 'choropleth',
+        color=~countrycount, 
+        colors='Greens', 
+        marker = list(line = l)) %>%
+  layout(title='台灣大專院校的學生去各國家進修交流人數', geo=g)
 ```
 
 ## 台灣學生出國留學分析
@@ -193,6 +337,9 @@ ggplot(PRTSchoolSum,
 ### 資料匯入與處理
 ```{r dataloadFromTWNAb}
 #這是R Code Chunk
+#匯入世界各主要國家之我國留學生人數統計表(第七題)
+StudyAbord105<- read_csv("C:/Users/hh770/Downloads/105abc .csv")
+StudyAbord105<-StudyAbord105[,-c(4,5,6)]
 ```
 
 ### 台灣學生最喜歡去哪些國家留學呢？
@@ -200,15 +347,53 @@ ggplot(PRTSchoolSum,
 #這是R Code Chunk
 
 #(第七題)台灣學生最喜歡去哪些國家留學呢？請取出前十名的國家與總人數，由大到小排序
-head(arrange(StudyAbord105,desc(總人數)),10)
 knitr::kable(head(arrange(StudyAbord105,desc(總人數)),10))
 ```
 
 ### 台灣學生最喜歡去哪些國家留學面量圖
 ```{r FromTWNAbMap}
 #這是R Code Chunk
+#(第八題)請用面量圖呈現台灣學生去各國家留學人數，人數越多顏色越深(畫世界)
+#改國家名字
+StudyAbord105$country<-""
+for (n in 1:29) {
+  for (m in 1:250) {
+    if(StudyAbord105[n,2]==CountryName$Taiwan[m])
+      StudyAbord105[n,4]<-CountryName$ISO3[m]
+  }
+}
+#手動輸入
+StudyAbord105[15,4]<-"AUS"
+StudyAbord105[18,4]<-"KOR"
+StudyAbord105[20,4]<-"SGP"
+#用PLOT畫圖
+plot_ly(StudyAbord105, 
+        z=~'總人數', 
+        text=~country, 
+        locations=~country, 
+        type= 'choropleth',
+        color=~'總人數', 
+        colors='Greens', 
+        marker = list(line = l)) %>%
+  layout(title='台灣學生去各國家留學人數', geo=g)
+
 ```
 
 ## 綜合分析
 
 請問來台讀書與離台讀書的來源國與留學國趨勢是否相同(5分)？想來台灣唸書的境外生，他們的母國也有很多台籍生嗎？請圖文並茂說明你的觀察(10分)。
+```{r }
+#這是R Code Chunk
+#(第九題)請問來台讀書與離台讀書的來源國與留學國趨勢是否相同(5分)？
+#合併來台讀書(CountryBaseSum)與離台讀書(StudyAbord105)的資料表
+StudyTrend<-merge(StudyAbord105,CountryBaseSum,by="國別",all=TRUE)
+#畫圖
+ggplot(StudyTrend, aes(x = 國別)) +
+  geom_line(aes(y = 總人數)) +
+  geom_line(aes(y = CountrySum))+
+  theme(axis.text.x = element_text(size = 6,angle = 90))+
+  theme(panel.border = element_blank())
+#想來台灣唸書的境外生，他們的母國也有很多台籍生嗎？請圖文並茂說明你的觀察(10分)。
+
+```
+依照趨勢圖來看，亞洲國家比較有這樣的趨勢，尤其是中國大陸、日本、南韓。台灣大專院校學生出國留學有偏向喜歡在亞洲、歐洲、美國的趨勢。國外的學生大部分來說是從亞洲來的佔了較高的比率，他們可能是覺得同樣在亞洲比較近，所以選擇了台灣。
